[workspace]
members = [
	"bin/collator",
	"bin/xcm-tools",
	"runtime/local",
	"runtime/astar",
	"runtime/shiden",
	"runtime/shibuya",
	"tests/xcm-simulator",
	"tests/integration",
	"tests/utils",
	"pallets/*",
	"precompiles/*",
	"primitives",
	"chain-extensions/pallet-assets",
	"chain-extensions/unified-accounts",
	"chain-extensions/types/*",
	"vendor/evm-tracing",
	"vendor/primitives/debug",
	"vendor/primitives/evm-tracing-events",
	"vendor/primitives/txpool",
	"vendor/rpc/debug",
	"vendor/rpc/trace",
	"vendor/rpc-core/debug",
	"vendor/rpc-core/trace",
	"vendor/rpc-core/types",
	"vendor/runtime/evm-tracer",
	"vendor/runtime/ext",
	"vendor/treasury",
]

resolver = "2"

exclude = ["vendor"]

[profile.release]
# Astar runtime requires unwinding.
panic = "unwind"

[profile.production]
inherits = "release"
lto = true
codegen-units = 1

[workspace.package]
authors = ["Stake Technologies <devops@stake.co.jp>"]
edition = "2021"
homepage = "https://astar.network"
repository = "https://github.com/AstarNetwork/Astar"

[workspace.dependencies]
# General deps
# (wasm)
parity-scale-codec = { version = "3.6.12", default-features = false, features = ["derive"] }
scale-info = { version = "2.11.6", default-features = false, features = ["derive"] }
log = { version = "0.4.27", default-features = false }
environmental = { version = "1.1.4", default-features = false }
sha3 = { version = "0.10.1", default-features = false }
num_enum = { version = "0.5.3", default-features = false }
num-traits = { version = "0.2", default-features = false }
rand = { version = "0.8.5", default-features = false }
bounded-collections = { version = "0.1.5", default-features = false }
hex = { version = "0.4.3", default-features = false }
paste = "1.0.6"
once_cell = { version = "1.19.0", default-features = false }

# (native)
array-bytes = "6.2.2"
smallvec = "1.9.0"
async-trait = "0.1.79"
clap = { version = "4.2.5", features = ["derive"] }
env_logger = "0.10.0"
futures = { version = "0.3.30" }
serde = { version = "1.0.214", default-features = false, features = ["derive", "alloc"] }
serde_json = { version = "1.0.132", default-features = false }
tokio = { version = "1.40.0", features = ["macros", "sync"] }
url = "2.2.2"
jsonrpsee = { version = "0.24.7", features = ["server"] }
hex-literal = "0.4.1"
rlp = "0.6"
tracing = "0.1.34"
similar-asserts = { version = "1.1.0" }
assert_matches = "1.3.0"
libsecp256k1 = { version = "0.7.0", default-features = false }
impl-trait-for-tuples = "0.2.2"
slices = "0.2.0"
derive_more = { version = "0.99" }
proc-macro2 = "1.0"
quote = "1.0"
syn = { version = "1.0" }
ethers = { version = "2.0.9", default-features = false }
docify = { version = "0.2.8" }

# Substrate
# (wasm)
sp-core = { git = "https://github.com/paritytech/polkadot-sdk", tag = "polkadot-stable2412-4", default-features = false }
sp-core-hashing = { git = "https://github.com/paritytech/polkadot-sdk", tag = "polkadot-stable2412-4", default-features = false }
sp-io = { git = "https://github.com/paritytech/polkadot-sdk", tag = "polkadot-stable2412-4", default-features = false }
sp-runtime = { git = "https://github.com/paritytech/polkadot-sdk", tag = "polkadot-stable2412-4", default-features = false }
sp-std = { git = "https://github.com/paritytech/polkadot-sdk", tag = "polkadot-stable2412-4", default-features = false }
sp-tracing = { git = "https://github.com/paritytech/polkadot-sdk", tag = "polkadot-stable2412-4", default-features = false }
sp-api = { git = "https://github.com/paritytech/polkadot-sdk", tag = "polkadot-stable2412-4", default-features = false }
sp-block-builder = { git = "https://github.com/paritytech/polkadot-sdk", tag = "polkadot-stable2412-4", default-features = false }
sp-consensus-aura = { git = "https://github.com/paritytech/polkadot-sdk", tag = "polkadot-stable2412-4", default-features = false }
sp-inherents = { git = "https://github.com/paritytech/polkadot-sdk", tag = "polkadot-stable2412-4", default-features = false }
sp-offchain = { git = "https://github.com/paritytech/polkadot-sdk", tag = "polkadot-stable2412-4", default-features = false }
sp-runtime-interface = { git = "https://github.com/paritytech/polkadot-sdk", tag = "polkadot-stable2412-4", default-features = false }
sp-session = { git = "https://github.com/paritytech/polkadot-sdk", tag = "polkadot-stable2412-4", default-features = false }
sp-transaction-pool = { git = "https://github.com/paritytech/polkadot-sdk", tag = "polkadot-stable2412-4", default-features = false }
sp-version = { git = "https://github.com/paritytech/polkadot-sdk", tag = "polkadot-stable2412-4", default-features = false }
sp-arithmetic = { git = "https://github.com/paritytech/polkadot-sdk", tag = "polkadot-stable2412-4", default-features = false }
sp-staking = { git = "https://github.com/paritytech/polkadot-sdk", tag = "polkadot-stable2412-4", default-features = false }
sp-externalities = { git = "https://github.com/paritytech/polkadot-sdk", tag = "polkadot-stable2412-4", default-features = false }
sp-genesis-builder = { git = "https://github.com/paritytech/polkadot-sdk", tag = "polkadot-stable2412-4", default-features = false }

# (native)
sp-blockchain = { git = "https://github.com/paritytech/polkadot-sdk", tag = "polkadot-stable2412-4" }
sp-consensus = { git = "https://github.com/paritytech/polkadot-sdk", tag = "polkadot-stable2412-4" }
sp-keyring = { git = "https://github.com/paritytech/polkadot-sdk", tag = "polkadot-stable2412-4" }
sp-keystore = { git = "https://github.com/paritytech/polkadot-sdk", tag = "polkadot-stable2412-4" }
sp-timestamp = { git = "https://github.com/paritytech/polkadot-sdk", tag = "polkadot-stable2412-4" }
sp-trie = { git = "https://github.com/paritytech/polkadot-sdk", tag = "polkadot-stable2412-4" }
sc-basic-authorship = { git = "https://github.com/paritytech/polkadot-sdk", tag = "polkadot-stable2412-4" }
sc-chain-spec = { git = "https://github.com/paritytech/polkadot-sdk", tag = "polkadot-stable2412-4" }
sc-client-api = { git = "https://github.com/paritytech/polkadot-sdk", tag = "polkadot-stable2412-4" }
sc-client-db = { git = "https://github.com/paritytech/polkadot-sdk", tag = "polkadot-stable2412-4" }
sc-consensus = { git = "https://github.com/paritytech/polkadot-sdk", tag = "polkadot-stable2412-4" }
sc-consensus-aura = { git = "https://github.com/paritytech/polkadot-sdk", tag = "polkadot-stable2412-4" }
sc-consensus-babe = { git = "https://github.com/paritytech/polkadot-sdk", tag = "polkadot-stable2412-4" }
sc-executor = { git = "https://github.com/paritytech/polkadot-sdk", tag = "polkadot-stable2412-4" }
sc-consensus-grandpa = { git = "https://github.com/paritytech/polkadot-sdk", tag = "polkadot-stable2412-4" }
sc-consensus-manual-seal = { git = "https://github.com/paritytech/polkadot-sdk", tag = "polkadot-stable2412-4" }
sc-network = { git = "https://github.com/paritytech/polkadot-sdk", tag = "polkadot-stable2412-4" }
sc-network-sync = { git = "https://github.com/paritytech/polkadot-sdk", tag = "polkadot-stable2412-4" }
sc-offchain = { git = "https://github.com/paritytech/polkadot-sdk", tag = "polkadot-stable2412-4" }
sc-rpc = { git = "https://github.com/paritytech/polkadot-sdk", tag = "polkadot-stable2412-4" }
sc-service = { git = "https://github.com/paritytech/polkadot-sdk", tag = "polkadot-stable2412-4" }
sc-sysinfo = { git = "https://github.com/paritytech/polkadot-sdk", tag = "polkadot-stable2412-4" }
sc-telemetry = { git = "https://github.com/paritytech/polkadot-sdk", tag = "polkadot-stable2412-4" }
sc-tracing = { git = "https://github.com/paritytech/polkadot-sdk", tag = "polkadot-stable2412-4" }
sc-transaction-pool = { git = "https://github.com/paritytech/polkadot-sdk", tag = "polkadot-stable2412-4" }
sc-transaction-pool-api = { git = "https://github.com/paritytech/polkadot-sdk", tag = "polkadot-stable2412-4" }
sc-utils = { git = "https://github.com/paritytech/polkadot-sdk", tag = "polkadot-stable2412-4" }
substrate-prometheus-endpoint = { git = "https://github.com/paritytech/polkadot-sdk", tag = "polkadot-stable2412-4" }
pallet-transaction-payment-rpc = { git = "https://github.com/paritytech/polkadot-sdk", tag = "polkadot-stable2412-4" }
substrate-frame-rpc-system = { git = "https://github.com/paritytech/polkadot-sdk", tag = "polkadot-stable2412-4" }
sc-cli = { git = "https://github.com/paritytech/polkadot-sdk", tag = "polkadot-stable2412-4" }
frame-benchmarking-cli = { git = "https://github.com/paritytech/polkadot-sdk", tag = "polkadot-stable2412-4" }

# Substrate pallets
# (wasm)
pallet-assets = { git = "https://github.com/paritytech/polkadot-sdk", tag = "polkadot-stable2412-4", default-features = false }
pallet-balances = { git = "https://github.com/paritytech/polkadot-sdk", tag = "polkadot-stable2412-4", default-features = false }
pallet-proxy = { git = "https://github.com/paritytech/polkadot-sdk", tag = "polkadot-stable2412-4", default-features = false }
pallet-utility = { git = "https://github.com/paritytech/polkadot-sdk", tag = "polkadot-stable2412-4", default-features = false }
frame-support = { git = "https://github.com/paritytech/polkadot-sdk", tag = "polkadot-stable2412-4", default-features = false }
frame-system = { git = "https://github.com/paritytech/polkadot-sdk", tag = "polkadot-stable2412-4", default-features = false }
frame-executive = { git = "https://github.com/paritytech/polkadot-sdk", tag = "polkadot-stable2412-4", default-features = false }
frame-metadata-hash-extension = { git = "https://github.com/paritytech/polkadot-sdk", tag = "polkadot-stable2412-4", default-features = false }
frame-system-rpc-runtime-api = { git = "https://github.com/paritytech/polkadot-sdk", tag = "polkadot-stable2412-4", default-features = false }
pallet-aura = { git = "https://github.com/paritytech/polkadot-sdk", tag = "polkadot-stable2412-4", default-features = false }
pallet-authorship = { git = "https://github.com/paritytech/polkadot-sdk", tag = "polkadot-stable2412-4", default-features = false }
pallet-contracts = { git = "https://github.com/paritytech/polkadot-sdk", tag = "polkadot-stable2412-4", default-features = false }
pallet-contracts-uapi = { git = "https://github.com/paritytech/polkadot-sdk", tag = "polkadot-stable2412-4", default-features = false }
pallet-identity = { git = "https://github.com/paritytech/polkadot-sdk", tag = "polkadot-stable2412-4", default-features = false }
pallet-multisig = { git = "https://github.com/paritytech/polkadot-sdk", tag = "polkadot-stable2412-4", default-features = false }
pallet-migrations = { git = "https://github.com/paritytech/polkadot-sdk", tag = "polkadot-stable2412-4", default-features = false }
pallet-insecure-randomness-collective-flip = { git = "https://github.com/paritytech/polkadot-sdk", tag = "polkadot-stable2412-4", default-features = false }
pallet-session = { git = "https://github.com/paritytech/polkadot-sdk", tag = "polkadot-stable2412-4", default-features = false, features = ["historical"] }
pallet-sudo = { git = "https://github.com/paritytech/polkadot-sdk", tag = "polkadot-stable2412-4", default-features = false }
pallet-timestamp = { git = "https://github.com/paritytech/polkadot-sdk", tag = "polkadot-stable2412-4", default-features = false }
pallet-transaction-payment = { git = "https://github.com/paritytech/polkadot-sdk", tag = "polkadot-stable2412-4", default-features = false }
pallet-transaction-payment-rpc-runtime-api = { git = "https://github.com/paritytech/polkadot-sdk", tag = "polkadot-stable2412-4", default-features = false }
pallet-vesting = { git = "https://github.com/paritytech/polkadot-sdk", tag = "polkadot-stable2412-4", default-features = false }
frame-benchmarking = { git = "https://github.com/paritytech/polkadot-sdk", tag = "polkadot-stable2412-4", default-features = false }
frame-system-benchmarking = { git = "https://github.com/paritytech/polkadot-sdk", tag = "polkadot-stable2412-4", default-features = false }
frame-try-runtime = { git = "https://github.com/paritytech/polkadot-sdk", tag = "polkadot-stable2412-4", default-features = false }
pallet-preimage = { git = "https://github.com/paritytech/polkadot-sdk", tag = "polkadot-stable2412-4", default-features = false }
pallet-scheduler = { git = "https://github.com/paritytech/polkadot-sdk", tag = "polkadot-stable2412-4", default-features = false }
pallet-grandpa = { git = "https://github.com/paritytech/polkadot-sdk", tag = "polkadot-stable2412-4", default-features = false }
pallet-message-queue = { git = "https://github.com/paritytech/polkadot-sdk", tag = "polkadot-stable2412-4", default-features = false }
pallet-membership = { git = "https://github.com/paritytech/polkadot-sdk", tag = "polkadot-stable2412-4", default-features = false }
pallet-collective = { git = "https://github.com/paritytech/polkadot-sdk", tag = "polkadot-stable2412-4", default-features = false }
pallet-democracy = { git = "https://github.com/paritytech/polkadot-sdk", tag = "polkadot-stable2412-4", default-features = false }
pallet-tx-pause = { git = "https://github.com/paritytech/polkadot-sdk", tag = "polkadot-stable2412-4", default-features = false }
pallet-safe-mode = { git = "https://github.com/paritytech/polkadot-sdk", tag = "polkadot-stable2412-4", default-features = false }

# EVM & Ethereum
# (wasm)
# To make it compatible with frontier
evm = { git = "https://github.com/rust-ethereum/evm", branch = "v0.x", default-features = false }
evm-gasometer = { git = "https://github.com/rust-ethereum/evm", branch = "v0.x", default-features = false }
evm-runtime = { git = "https://github.com/rust-ethereum/evm", branch = "v0.x", default-features = false }
ethereum-types = { version = "0.15", default-features = false }
ethereum = { git = "https://github.com/rust-ethereum/ethereum", rev = "3be0d8fd4c2ad1ba216b69ef65b9382612efc8ba", default-features = false }

# Frontier
# (wasm)
fp-rpc = { git = "https://github.com/AstarNetwork/frontier", branch = "stable2412-txpoolwrapper", default-features = false }
fp-self-contained = { git = "https://github.com/AstarNetwork/frontier", branch = "stable2412-txpoolwrapper", default-features = false, features = ["serde"] }
pallet-ethereum = { git = "https://github.com/AstarNetwork/frontier", branch = "stable2412-txpoolwrapper", default-features = false, features = ["forbid-evm-reentrancy"] }
pallet-evm = { git = "https://github.com/AstarNetwork/frontier", branch = "stable2412-txpoolwrapper", default-features = false, features = ["forbid-evm-reentrancy"] }
pallet-evm-precompile-blake2 = { git = "https://github.com/AstarNetwork/frontier", branch = "stable2412-txpoolwrapper", default-features = false }
pallet-evm-precompile-bn128 = { git = "https://github.com/AstarNetwork/frontier", branch = "stable2412-txpoolwrapper", default-features = false }
pallet-evm-precompile-dispatch = { git = "https://github.com/AstarNetwork/frontier", branch = "stable2412-txpoolwrapper", default-features = false }
pallet-evm-precompile-ed25519 = { git = "https://github.com/AstarNetwork/frontier", branch = "stable2412-txpoolwrapper", default-features = false }
pallet-evm-precompile-modexp = { git = "https://github.com/AstarNetwork/frontier", branch = "stable2412-txpoolwrapper", default-features = false }
pallet-evm-precompile-sha3fips = { git = "https://github.com/AstarNetwork/frontier", branch = "stable2412-txpoolwrapper", default-features = false }
pallet-evm-precompile-simple = { git = "https://github.com/AstarNetwork/frontier", branch = "stable2412-txpoolwrapper", default-features = false }
pallet-base-fee = { git = "https://github.com/AstarNetwork/frontier", branch = "stable2412-txpoolwrapper", default-features = false }
pallet-evm-chain-id = { git = "https://github.com/AstarNetwork/frontier", branch = "stable2412-txpoolwrapper", default-features = false }
fp-evm = { git = "https://github.com/AstarNetwork/frontier", branch = "stable2412-txpoolwrapper", default-features = false }
fp-ethereum = { git = "https://github.com/AstarNetwork/frontier", branch = "stable2412-txpoolwrapper", default-features = false }
precompile-utils = { git = "https://github.com/AstarNetwork/frontier", branch = "stable2412-txpoolwrapper", default-features = false }

# (native)
fc-consensus = { git = "https://github.com/AstarNetwork/frontier", branch = "stable2412-txpoolwrapper" }
fc-db = { git = "https://github.com/AstarNetwork/frontier", branch = "stable2412-txpoolwrapper" }
fc-api = { git = "https://github.com/AstarNetwork/frontier", branch = "stable2412-txpoolwrapper" }
fc-mapping-sync = { git = "https://github.com/AstarNetwork/frontier", branch = "stable2412-txpoolwrapper" }
fc-rpc = { git = "https://github.com/AstarNetwork/frontier", branch = "stable2412-txpoolwrapper", features = ["rpc-binary-search-estimate", "txpool"] }
fc-rpc-core = { git = "https://github.com/AstarNetwork/frontier", branch = "stable2412-txpoolwrapper" }
fp-consensus = { git = "https://github.com/AstarNetwork/frontier", branch = "stable2412-txpoolwrapper" }
fp-storage = { git = "https://github.com/AstarNetwork/frontier", branch = "stable2412-txpoolwrapper" }
fc-storage = { git = "https://github.com/AstarNetwork/frontier", branch = "stable2412-txpoolwrapper" }

# Cumulus
# (wasm)
cumulus-pallet-aura-ext = { git = "https://github.com/paritytech/polkadot-sdk", tag = "polkadot-stable2412-4", default-features = false }
cumulus-pallet-parachain-system = { git = "https://github.com/paritytech/polkadot-sdk", tag = "polkadot-stable2412-4", default-features = false }
cumulus-pallet-xcmp-queue = { git = "https://github.com/paritytech/polkadot-sdk", tag = "polkadot-stable2412-4", default-features = false }
cumulus-primitives-aura = { git = "https://github.com/paritytech/polkadot-sdk", tag = "polkadot-stable2412-4", default-features = false }
cumulus-primitives-core = { git = "https://github.com/paritytech/polkadot-sdk", tag = "polkadot-stable2412-4", default-features = false }
cumulus-primitives-utility = { git = "https://github.com/paritytech/polkadot-sdk", tag = "polkadot-stable2412-4", default-features = false }
parachain-info = { package = "staging-parachain-info", git = "https://github.com/paritytech/polkadot-sdk", tag = "polkadot-stable2412-4", default-features = false }
parachains-common = { git = "https://github.com/paritytech/polkadot-sdk", tag = "polkadot-stable2412-4", default-features = false }

# (native)
cumulus-client-cli = { git = "https://github.com/paritytech/polkadot-sdk", tag = "polkadot-stable2412-4" }
cumulus-client-consensus-aura = { git = "https://github.com/paritytech/polkadot-sdk", tag = "polkadot-stable2412-4" }
cumulus-client-consensus-common = { git = "https://github.com/paritytech/polkadot-sdk", tag = "polkadot-stable2412-4" }
cumulus-client-consensus-relay-chain = { git = "https://github.com/paritytech/polkadot-sdk", tag = "polkadot-stable2412-4" }
cumulus-client-network = { git = "https://github.com/paritytech/polkadot-sdk", tag = "polkadot-stable2412-4" }
cumulus-client-service = { git = "https://github.com/paritytech/polkadot-sdk", tag = "polkadot-stable2412-4" }
cumulus-client-collator = { git = "https://github.com/paritytech/polkadot-sdk", tag = "polkadot-stable2412-4" }
cumulus-client-consensus-proposer = { git = "https://github.com/paritytech/polkadot-sdk", tag = "polkadot-stable2412-4" }
cumulus-primitives-parachain-inherent = { git = "https://github.com/paritytech/polkadot-sdk", tag = "polkadot-stable2412-4" }
cumulus-relay-chain-inprocess-interface = { git = "https://github.com/paritytech/polkadot-sdk", tag = "polkadot-stable2412-4" }
cumulus-relay-chain-interface = { git = "https://github.com/paritytech/polkadot-sdk", tag = "polkadot-stable2412-4" }
cumulus-relay-chain-minimal-node = { git = "https://github.com/paritytech/polkadot-sdk", tag = "polkadot-stable2412-4" }
cumulus-relay-chain-rpc-interface = { git = "https://github.com/paritytech/polkadot-sdk", tag = "polkadot-stable2412-4" }
cumulus-test-relay-sproof-builder = { git = "https://github.com/paritytech/polkadot-sdk", tag = "polkadot-stable2412-4" }

# Polkadot
# (wasm)
polkadot-primitives = { git = "https://github.com/paritytech/polkadot-sdk", tag = "polkadot-stable2412-4", default-features = false }
polkadot-runtime-common = { git = "https://github.com/paritytech/polkadot-sdk", tag = "polkadot-stable2412-4", default-features = false }
polkadot-core-primitives = { git = "https://github.com/paritytech/polkadot-sdk", tag = "polkadot-stable2412-4", default-features = false }
polkadot-parachain = { package = "polkadot-parachain-primitives", git = "https://github.com/paritytech/polkadot-sdk", tag = "polkadot-stable2412-4", default-features = false }
polkadot-runtime-parachains = { git = "https://github.com/paritytech/polkadot-sdk", tag = "polkadot-stable2412-4", default-features = false }

# XCM
# (wasm)
cumulus-pallet-xcm = { git = "https://github.com/paritytech/polkadot-sdk", tag = "polkadot-stable2412-4", default-features = false }
xcm = { package = "staging-xcm", git = "https://github.com/paritytech/polkadot-sdk", tag = "polkadot-stable2412-4", default-features = false }
pallet-xcm = { git = "https://github.com/paritytech/polkadot-sdk", tag = "polkadot-stable2412-4", default-features = false }
pallet-xcm-benchmarks = { git = "https://github.com/paritytech/polkadot-sdk", tag = "polkadot-stable2412-4", default-features = false }
xcm-builder = { package = "staging-xcm-builder", git = "https://github.com/paritytech/polkadot-sdk", tag = "polkadot-stable2412-4", default-features = false }
xcm-executor = { package = "staging-xcm-executor", git = "https://github.com/paritytech/polkadot-sdk", tag = "polkadot-stable2412-4", default-features = false }
xcm-simulator = { git = "https://github.com/paritytech/polkadot-sdk", tag = "polkadot-stable2412-4", default-features = false }
xcm-runtime-apis = { git = "https://github.com/paritytech/polkadot-sdk", tag = "polkadot-stable2412-4", default-features = false }

# (native)
polkadot-cli = { git = "https://github.com/paritytech/polkadot-sdk", tag = "polkadot-stable2412-4" }
polkadot-service = { git = "https://github.com/paritytech/polkadot-sdk", tag = "polkadot-stable2412-4" }

# ORML
# (wasm)
orml-xtokens = { git = "https://github.com/AstarNetwork/open-runtime-module-library", branch = "stable2412", default-features = false }
orml-traits = { git = "https://github.com/AstarNetwork/open-runtime-module-library", branch = "stable2412", default-features = false }
orml-xcm-support = { git = "https://github.com/AstarNetwork/open-runtime-module-library", branch = "stable2412", default-features = false }
orml-oracle = { git = "https://github.com/AstarNetwork/open-runtime-module-library", branch = "stable2412", default-features = false }

# Astar pallets & modules
# (wasm)
pallet-collator-selection = { path = "./pallets/collator-selection", default-features = false }
pallet-dapp-staking = { path = "./pallets/dapp-staking", default-features = false }
pallet-xc-asset-config = { path = "./pallets/xc-asset-config", default-features = false }
pallet-ethereum-checked = { path = "./pallets/ethereum-checked", default-features = false }
pallet-inflation = { path = "./pallets/inflation", default-features = false }
pallet-dynamic-evm-base-fee = { path = "./pallets/dynamic-evm-base-fee", default-features = false }
pallet-unified-accounts = { path = "./pallets/unified-accounts", default-features = false }
astar-xcm-benchmarks = { path = "./pallets/astar-xcm-benchmarks", default-features = false }
pallet-static-price-provider = { path = "./pallets/static-price-provider", default-features = false }
pallet-price-aggregator = { path = "./pallets/price-aggregator", default-features = false }
pallet-collective-proxy = { path = "./pallets/collective-proxy", default-features = false }
vesting-mbm = { path = "./pallets/vesting-mbm", default-features = false }
pallet-treasury = { path = "./vendor/treasury", default-features = false }

dapp-staking-runtime-api = { path = "./pallets/dapp-staking/rpc/runtime-api", default-features = false }

astar-primitives = { path = "./primitives", default-features = false }
astar-test-utils = { path = "./tests/utils", default-features = false }

pallet-evm-precompile-assets-erc20 = { path = "./precompiles/assets-erc20", default-features = false }
pallet-evm-precompile-sr25519 = { path = "./precompiles/sr25519", default-features = false }
pallet-evm-precompile-substrate-ecdsa = { path = "./precompiles/substrate-ecdsa", default-features = false }
pallet-evm-precompile-xcm = { path = "./precompiles/xcm", default-features = false }
pallet-evm-precompile-dapp-staking = { path = "./precompiles/dapp-staking", default-features = false }
pallet-evm-precompile-unified-accounts = { path = "./precompiles/unified-accounts", default-features = false }
pallet-evm-precompile-dispatch-lockdrop = { path = "./precompiles/dispatch-lockdrop", default-features = false }

pallet-chain-extension-assets = { path = "./chain-extensions/pallet-assets", default-features = false }
pallet-chain-extension-unified-accounts = { path = "./chain-extensions/unified-accounts", default-features = false }

assets-chain-extension-types = { path = "./chain-extensions/types/assets", default-features = false }
unified-accounts-chain-extension-types = { path = "./chain-extensions/types/unified-accounts", default-features = false }

local-runtime = { path = "./runtime/local", default-features = false }
shibuya-runtime = { path = "./runtime/shibuya", default-features = false }
shiden-runtime = { path = "./runtime/shiden", default-features = false }
astar-runtime = { path = "./runtime/astar", default-features = false }

## Moonbeam tracing
## (wasm)
moonbeam-evm-tracer = { path = "./vendor/runtime/evm-tracer", default-features = false }
moonbeam-rpc-primitives-debug = { path = "./vendor/primitives/debug", default-features = false }
moonbeam-rpc-primitives-txpool = { path = "./vendor/primitives/txpool", default-features = false }
evm-tracing-events = { path = "./vendor/primitives/evm-tracing-events", default-features = false }
moonbeam-primitives-ext = { path = "./vendor/runtime/ext", default-features = false }

## (native)
moonbeam-rpc-debug = { path = "./vendor/rpc/debug" }
moonbeam-rpc-trace = { path = "./vendor/rpc/trace" }
moonbeam-client-evm-tracing = { path = "./vendor/evm-tracing" }
moonbeam-rpc-core-types = { path = "./vendor/rpc-core/types" }
moonbeam-rpc-core-trace = { path = "./vendor/rpc-core/trace" }
moonbeam-rpc-core-debug = { path = "./vendor/rpc-core/debug" }

# Build deps
substrate-wasm-builder = { git = "https://github.com/paritytech/polkadot-sdk", tag = "polkadot-stable2412-4" }
substrate-build-script-utils = { git = "https://github.com/paritytech/polkadot-sdk", tag = "polkadot-stable2412-4" }
