[package]
name = "astar-primitives"
version = "0.1.0"
authors.workspace = true
edition.workspace = true
homepage.workspace = true
repository.workspace = true

[dependencies]
# third-party dependencies
impl-trait-for-tuples = { workspace = true }
log = { workspace = true }
parity-scale-codec = { workspace = true }
scale-info = { workspace = true }

# Ethereum/Frontier dependencies
ethereum = { workspace = true, features = ["with-codec"] }
ethereum-types = { workspace = true }
fp-evm = { workspace = true }

# Substrate dependencies
frame-support = { workspace = true }
frame-system = { workspace = true }
pallet-assets = { workspace = true }
sp-arithmetic = { workspace = true }
sp-core = { workspace = true }
sp-io = { workspace = true }
sp-runtime = { workspace = true }
sp-std = { workspace = true }

# XCM dependencies
xcm = { workspace = true }
xcm-builder = { workspace = true }
xcm-executor = { workspace = true }

# ORML dependencies
orml-oracle = { workspace = true }
orml-traits = { workspace = true }

pallet-contracts = { workspace = true }

# Frontier dependencies
pallet-evm = { workspace = true }

# Astar pallets & dependencies
pallet-evm-precompile-assets-erc20 = { workspace = true }
pallet-evm-precompile-dispatch = { workspace = true }
pallet-xc-asset-config = { workspace = true }

[features]
default = ["std"]
std = [
	"ethereum-types/std",
	"ethereum/std",
	"fp-evm/std",
	"frame-support/std",
	"frame-system/std",
	"log/std",
	"orml-oracle/std",
	"orml-traits/std",
	"pallet-assets/std",
	"pallet-contracts/std",
	"pallet-evm-precompile-assets-erc20/std",
	"pallet-evm-precompile-dispatch/std",
	"pallet-evm/std",
	"pallet-xc-asset-config/std",
	"parity-scale-codec/std",
	"scale-info/std",
	"sp-arithmetic/std",
	"sp-core/std",
	"sp-io/std",
	"sp-runtime/std",
	"sp-std/std",
	"xcm-builder/std",
	"xcm-executor/std",
	"xcm/std",
]
runtime-benchmarks = [
	"frame-support/runtime-benchmarks",
	"frame-system/runtime-benchmarks",
	"pallet-assets/runtime-benchmarks",
	"pallet-contracts/runtime-benchmarks",
	"pallet-evm-precompile-assets-erc20/runtime-benchmarks",
	"pallet-evm/runtime-benchmarks",
	"pallet-xc-asset-config/runtime-benchmarks",
	"sp-runtime/runtime-benchmarks",
	"xcm-builder/runtime-benchmarks",
	"xcm-executor/runtime-benchmarks",
]
try-runtime = [
	"frame-support/try-runtime",
	"frame-system/try-runtime",
	"orml-oracle/try-runtime",
	"pallet-assets/try-runtime",
	"pallet-contracts/try-runtime",
	"pallet-evm/try-runtime",
	"pallet-xc-asset-config/try-runtime",
	"sp-runtime/try-runtime",
]
