[package]
name = "node-plasm-runtime"
version = "2.0.0"
authors = ["Takumi Yamashita<takumi@staked.co.jp>"]
edition = "2018"

[dependencies]
serde = { version = "1.0", optional = true, features = ["derive"] }
safe-mix = { version = "1.0", default-features = false }
parity-codec = { version = "4.1.1", default-features = false, features = ["derive"] }
rstd = { package = "sr-std", git = 'https://github.com/paritytech/substrate.git', rev = 'f7489f0ed45c36ee19060d4a70c773673c48d924', default_features = false }
runtime-io = { package = "sr-io", git = 'https://github.com/paritytech/substrate.git', rev = 'f7489f0ed45c36ee19060d4a70c773673c48d924', default_features = false }
version = { package = "sr-version", git = 'https://github.com/paritytech/substrate.git', rev = 'f7489f0ed45c36ee19060d4a70c773673c48d924', default_features = false }
support = { package = "srml-support", git = 'https://github.com/paritytech/substrate.git', rev = 'f7489f0ed45c36ee19060d4a70c773673c48d924', default_features = false }
primitives = { package = "substrate-primitives", git = 'https://github.com/paritytech/substrate.git', rev = 'f7489f0ed45c36ee19060d4a70c773673c48d924', default_features = false }
balances = { package = "srml-balances", git = 'https://github.com/paritytech/substrate.git', rev = 'f7489f0ed45c36ee19060d4a70c773673c48d924', default_features = false }
contracts = { package = "srml-contracts", git = 'https://github.com/paritytech/substrate.git', rev = 'f7489f0ed45c36ee19060d4a70c773673c48d924', default_features = false }
aura = { package = "srml-aura", git = 'https://github.com/paritytech/substrate.git', rev = 'f7489f0ed45c36ee19060d4a70c773673c48d924', default_features = false }
executive = { package = "srml-executive", git = 'https://github.com/paritytech/substrate.git', rev = 'f7489f0ed45c36ee19060d4a70c773673c48d924', default_features = false }
indices = { package = "srml-indices", git = 'https://github.com/paritytech/substrate.git', rev = 'f7489f0ed45c36ee19060d4a70c773673c48d924', default_features = false }
system = { package = "srml-system", git = 'https://github.com/paritytech/substrate.git', rev = 'f7489f0ed45c36ee19060d4a70c773673c48d924', default_features = false }
timestamp = { package = "srml-timestamp", git = 'https://github.com/paritytech/substrate.git', rev = 'f7489f0ed45c36ee19060d4a70c773673c48d924', default_features = false }
sudo = { package = "srml-sudo", git = 'https://github.com/paritytech/substrate.git', rev = 'f7489f0ed45c36ee19060d4a70c773673c48d924', default_features = false }
runtime-primitives = { package = "sr-primitives", git = 'https://github.com/paritytech/substrate.git', rev = 'f7489f0ed45c36ee19060d4a70c773673c48d924', default_features = false }
client = { package = "substrate-client", git = 'https://github.com/paritytech/substrate.git', rev = 'f7489f0ed45c36ee19060d4a70c773673c48d924', default_features = false }
consensus-aura = { package = "substrate-consensus-aura-primitives", git = 'https://github.com/paritytech/substrate.git', rev = 'f7489f0ed45c36ee19060d4a70c773673c48d924', default_features = false }
offchain-primitives = { package = "substrate-offchain-primitives", git = 'https://github.com/paritytech/substrate.git', rev = 'f7489f0ed45c36ee19060d4a70c773673c48d924', default-features = false }

[build-dependencies]
wasm-builder-runner = { package = "substrate-wasm-builder-runner", version = "1.0.2" }

[features]
default = ["std"]
no_std = [
	"contracts/core",
]
std = [
	"parity-codec/std",
	"client/std",
	"rstd/std",
	"runtime-io/std",
	"support/std",
	"balances/std",
	"contracts/std",
	"executive/std",
	"aura/std",
	"indices/std",
	"primitives/std",
	"runtime-primitives/std",
	"system/std",
	"timestamp/std",
	"sudo/std",
	"version/std",
	"serde",
	"safe-mix/std",
	"consensus-aura/std",
	"offchain-primitives/std",
]
