[package]
name = "node-plasm-runtime"
version = "2.0.0"
authors = ["Takumi Yamashita<takumi@staked.co.jp>"]
edition = "2018"

[dependencies]
serde = { version = "1.0", optional = true, features = ["derive"] }
safe-mix = { version = "1.0", default-features = false }
codec = { package = "parity-scale-codec", version = "1.0.0", default-features = false, features = ["derive"] }
rstd = { package = "sr-std", git = "https://github.com/paritytech/substrate.git", rev ="d2e7d660f8dbbb8f9753dfd231cef1c9b502c41c", default_features = false }
runtime-io = { package = "sr-io", git = "https://github.com/paritytech/substrate.git", rev ="d2e7d660f8dbbb8f9753dfd231cef1c9b502c41c", default_features = false }
version = { package = "sr-version", git = "https://github.com/paritytech/substrate.git", rev ="d2e7d660f8dbbb8f9753dfd231cef1c9b502c41c", default_features = false }
support = { package = "srml-support", git = "https://github.com/paritytech/substrate.git", rev ="d2e7d660f8dbbb8f9753dfd231cef1c9b502c41c", default_features = false }
primitives = { package = "substrate-primitives", git = "https://github.com/paritytech/substrate.git", rev ="d2e7d660f8dbbb8f9753dfd231cef1c9b502c41c", default_features = false }
substrate-session = { git = "https://github.com/paritytech/substrate.git", rev ="d2e7d660f8dbbb8f9753dfd231cef1c9b502c41c", default-features = false }
balances = { package = "srml-balances", git = "https://github.com/paritytech/substrate.git", rev ="d2e7d660f8dbbb8f9753dfd231cef1c9b502c41c", default_features = false }
babe = { package = "srml-babe", git = "https://github.com/paritytech/substrate.git", rev ="d2e7d660f8dbbb8f9753dfd231cef1c9b502c41c", default-features = false }
babe-primitives = { package = "substrate-consensus-babe-primitives", git = "https://github.com/paritytech/substrate.git", rev ="d2e7d660f8dbbb8f9753dfd231cef1c9b502c41c", default-features = false }
executive = { package = "srml-executive", git = "https://github.com/paritytech/substrate.git", rev ="d2e7d660f8dbbb8f9753dfd231cef1c9b502c41c", default_features = false }
indices = { package = "srml-indices", git = "https://github.com/paritytech/substrate.git", rev ="d2e7d660f8dbbb8f9753dfd231cef1c9b502c41c", default_features = false }
grandpa = { package = "srml-grandpa", git = "https://github.com/paritytech/substrate.git", rev ="d2e7d660f8dbbb8f9753dfd231cef1c9b502c41c", default-features = false }
system = { package = "srml-system", git = "https://github.com/paritytech/substrate.git", rev ="d2e7d660f8dbbb8f9753dfd231cef1c9b502c41c", default_features = false }
timestamp = { package = "srml-timestamp", git = "https://github.com/paritytech/substrate.git", rev ="d2e7d660f8dbbb8f9753dfd231cef1c9b502c41c", default_features = false }
sudo = { package = "srml-sudo", git = "https://github.com/paritytech/substrate.git", rev ="d2e7d660f8dbbb8f9753dfd231cef1c9b502c41c", default_features = false }
sr-primitives = { git = "https://github.com/paritytech/substrate.git", rev ="d2e7d660f8dbbb8f9753dfd231cef1c9b502c41c", default_features = false }
client = { package = "substrate-client", git = "https://github.com/paritytech/substrate.git", rev ="d2e7d660f8dbbb8f9753dfd231cef1c9b502c41c", default_features = false }
offchain-primitives = { package = "substrate-offchain-primitives", git = "https://github.com/paritytech/substrate.git", rev ="d2e7d660f8dbbb8f9753dfd231cef1c9b502c41c", default-features = false }
contracts = { package = "srml-contracts", git = "https://github.com/paritytech/substrate.git", rev ="d2e7d660f8dbbb8f9753dfd231cef1c9b502c41c", default-features = false }

[build-dependencies]
wasm-builder-runner = { package = "substrate-wasm-builder-runner", version = "1.0.2" }

[features]
default = ["std"]
std = [
	"codec/std",
	"client/std",
	"rstd/std",
	"runtime-io/std",
	"support/std",
	"balances/std",
	"babe/std",
	"babe-primitives/std",
	"executive/std",
	"indices/std",
	"grandpa/std",
	"primitives/std",
	"sr-primitives/std",
	"system/std",
	"timestamp/std",
	"sudo/std",
	"version/std",
	"serde",
	"safe-mix/std",
	"offchain-primitives/std",
	"substrate-session/std",
	"contracts/std",
]
no_std = [
	"contracts/core",
]
